# spec-driven-agent

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README-BACKGROUND-AGENTS.md  README.md  agent  interactive-demo.html  pyproject.toml  requirements.txt  sitecustomize.py
.cursor/rules/: core.mdc  memory-bank.mdc
docs/: README.md  generate_openapi.py  index.md
docs/api/: openapi-guide.md
docs/architecture/: overview.md
docs/deployment/: configuration.md  installation.md  troubleshooting.md
docs/tutorials/: quickstart.md
examples/quickstart/: README.md
fastapi/: __init__.py
memory-bank/: activeContext.md  background-agent-tasks.md  custom-implementation-plan.md  ide-integration-strategy.md  mcp-compass-integration-plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pydantic/: __init__.py
scripts/: setup_testing.sh
spec_driven_agent/: __init__.py  main.py
spec_driven_agent/agents/: __init__.py  agent_manager.py  analyst_agent.py  architect_agent.py  base_agent.py  developer_agent.py  product_manager_agent.py  product_owner_agent.py  qa_agent.py  ux_expert_agent.py
spec_driven_agent/cli/: __init__.py  main.py  project_store.py  workflow_store.py
spec_driven_agent/core/: __init__.py  artifact_manager.py  consistency_validator.py  context_engine.py  llm_integration.py  state_manager.py  symbolic_engine.py  workflow_orchestrator.py
spec_driven_agent/models/: __init__.py  agent.py  artifact.py  base.py  context.py  project.py  specification.py  task.py  workflow.py
tests/: README.md  __init__.py  conftest.py  test_core_engine.py  test_llm_integration.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: __init__.py
tests/unit/test_agents/: __init__.py  test_analyst_agent.py  test_architect_agent.py  test_base_agent.py  test_developer_agent.py  test_product_owner_agent.py  test_qa_agent.py  test_ux_expert_agent.py
tests/unit/test_models/: __init__.py  test_task.py
tests/utils/: __init__.py  test_helpers.py
uvicorn/: __init__.py
